# prime_chu_timothy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prime_tjc2188/: __init__.py  prime_tjc2188.py
tests/: test_prime.ipynb  test_prime_tjc2188.py
