[tool.poetry]
name = "prime_tjc2188"
version = "0.1.0"
description = "A package for doing simple things like addition!"
authors = ["Tim Chu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
autoapi = "^2.0.1"
sphinx-rtd-theme = "^1.3.0"
sphinx = "^7.2.6"
myst-nb = "1.0.0rc0"
sphinx-autoapi = "^3.0.0"
doc = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
